--- a/src/pages/studies/studies.module.scss
+++ b/src/pages/studies/studies.module.scss
@@ -1,4 +1,8 @@
+@import 'colors';
+
 .layout {
+  display: flex;
+  flex-direction: row;
   overflow-y: hidden;
 }
 
